--- a/Inhalt/01_Standard/erklaerung.tex
+++ b/Inhalt/01_Standard/erklaerung.tex
@@ -1,17 +1,18 @@
 \chapter*{Eidesstattliche Erklärung}
-Ich versichere hiermit, dass ich meine \arbeit{} mit dem Thema:
+
+I hereby declare that this Bachelor thesis 
+
 \begin{quote}
 	\textit{\titel}
 \end{quote} 
-gemäß § 5 der \enquote{Studien- und Prüfungsordnung DHBW Technik} vom 29. September 2017 selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel benutzt habe. Die Arbeit wurde bisher keiner anderen Prüfungsbehörde vorgelegt und auch nicht veröffentlicht.
 
-\vspace{0.25cm}
+represents my original work and that I have used no other sources except as noted by citations. All data, tables, figures and text citations which have been reproduced from any other source, including the internet, have been explicitly acknowledged as such. This thesis has not been presented, so far, in the same or similar form in any other study course as examination performance or otherwise published.
 
-Ich versichere zudem, dass die eingereichte elektronische Fassung mit der gedruckten Fassung übereinstimmt.
+Additionally, I certify that the printed version is identical to the electronic document.
 
 \vspace{1cm}
 
-\verfassungsort, den \today \\[0.5cm]
+\verfassungsort, den 31. Mai 2022 \\[0.5cm]
 \ifthenelse{\boolean{e-Abgabe}}
 	{\underline{Gez. \autor}}
 	{\makebox[6cm]{\hrulefill}}\\ 
