--- a/Inhalt/01_Standard/sperrvermerk.tex
+++ b/Inhalt/01_Standard/sperrvermerk.tex
@@ -1,3 +1,3 @@
 \chapter*{Restriction Notice}
 
-This Bachelor thesis contains strictly confidential information and business se- crets of SAP SE. It is exclusively provided as an examination submission. Disclo- sure of information to anyone other than the examination board or lectors is not authorized. Copying, quoting, duplicating or publishing is not allowed without the explicit written authorization of SAP SE.
+This Bachelor thesis contains strictly confidential information and business secrets of SAP SE. It is exclusively provided as an examination submission. Disclosure of information to anyone other than the examination board or lectors is not authorized. Copying, quoting, duplicating or publishing is not allowed without the explicit written authorization of SAP SE.
