--- a/Inhalt/04_Inhalt/Evaluation.tex
+++ b/Inhalt/04_Inhalt/Evaluation.tex
@@ -15,9 +15,9 @@ Secondly, the dataset required special attention with respect to data protection
 
 Thirdly, the solution should be designed according to industry standards. The data mining follows industry standards by using state-of-the art models such as \ac{BERT}. Also, the Tableau dashboard presents the results in a way very common to this field. The research model used is the most popular and widely-used in the industry.
 
-Fourth, the code needs proper documentation. The Jupyter Notebook format allows for combining python code with markdown annotations. The resulting files are a great device for telling the story of the data analysis. The code is structured using headings to signify different logical units.
+Fourth, the code needs proper documentation. The Jupyter Notebook format allows for combining Python code with markdown annotations. The resulting files are a great device for telling the story of the data analysis. The code is structured using headings to signify different logical units.
 
-Fifth, the code should be optimized in its performance. A very careful choice of data structures based on benchmarks ensures the efficiency of the source code. Storage formats like the python \lstinline|pickle| persist the information in a memory-saving way. Also, the used parallel processing speeds up processing times.
+Fifth, the code should be optimized in its performance. A very careful choice of data structures based on benchmarks ensures the efficiency of the source code. Storage formats like the Python \lstinline|pickle| persist the information in a memory-saving way. Also, the used parallel processing speeds up processing times.
 
 \paragraph{Business Objectives}
 The business obectives (\ref{section:business-objectives}) firstly specify the goal of insight into spending across different related spending. The topics generated in section \ref{section:topics} summarize detailed cost into cross-cutting topics such as beverages. 
