--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -62,10 +62,10 @@
 \onehalfspacing
 
 % ------ Erklärung, Sperrvermerk, Abstact
-%\include{Inhalt/01_Standard/erklaerung}
+\include{Inhalt/01_Standard/erklaerung}
 \include{Inhalt/01_Standard/sperrvermerk}
-%\include{Inhalt/02_Abstract/abstract-en}
-%\include{Inhalt/02_Abstract/abstract-de}
+\include{Inhalt/02_Abstract/abstract-en}
+\include{Inhalt/02_Abstract/abstract-de}
 
 % ------ Inhaltsverzeichnis
 \singlespacing
